tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__NaquadahBasedFue-AAAAAAAAAAAAAAAAAAALkg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2962,
  "prerequisites": [
    2961
  ],
  "properties": {
    "auto_claim": false,
    "desc": "2 300 000 EU/t lasting 3.5s per liter. A good way of getting more power out of your naquadah fuels, if you can supply the materials.\n\nYou might require the Mega Chemical Reactor if attempting this in ZPM.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Naquadah Based Fuel MkII",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2961
  ],
  "rewards": [],
  "tasks": []
}
