tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__NaquadahBasedFue-AAAAAAAAAAAAAAAAAAALkw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2963,
  "prerequisites": [
    2959
  ],
  "properties": {
    "auto_claim": false,
    "desc": "9 511 000 EU/t lasting 4s per liter. Prepare to make a lot of this, as all subsequent tiers of Naquadah Fuel start from Mk III.\n\nThe alternate recipe can ease the logistical demand, but sourcing the chromatic glass might prove problematic until later.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Naquadah Based Fuel MkIII",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2959
  ],
  "rewards": [],
  "tasks": []
}
