tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__NaquadahBasedFue-AAAAAAAAAAAAAAAAAAALlA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2964,
  "prerequisites": [
    2963
  ],
  "properties": {
    "auto_claim": false,
    "desc": "88 540 000 EU/t lasting 5s per liter. Now the Naquadah Fuels are starting to get really good. Look into depleting Excited Thorium Fuel to source the praseodymium required.\n\nThe alternate recipe will require a Dimensionally Transcendent Plasma Forge, but can further ease the entire supply chain.\n\nHere might also be a good time to start thinking about using Molten Neutronium to improve the yield of High Density materials.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Naquadah Based Fuel MkIV",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2963
  ],
  "rewards": [],
  "tasks": []
}
